# kokoro_tts_mlx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: benchmark.py  benchmark_results.json
src/kokoro/: __init__.py  cli.py  tts.py  utils.py
src/kokoro/layers/: __init__.py  attention.py  istftnet.py  lstm.py  modules.py
src/kokoro/models/: __init__.py  kokoro.py
src/kokoro/processing/: __init__.py  text.py  voice.py
tests/: __init__.py  test_import.py
