[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro-tts-mlx"
version = "0.1.0"
description = "Kokoro TTS (Text-to-Speech) for Apple Silicon using MLX"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "mlx",
    "kokoro",
    "tts",
    "text-to-speech",
    "speech-synthesis",
    "apple",
    "apple-silicon",
    "ml",
]
authors = [
    { name = "flight505", email = "flight505@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mlx-audio>=0.2.0",
    "soundfile>=0.12.0",
    "typer>=0.12.0",
    "dacite>=1.8.0",
    "loguru>=0.7.0",
    "misaki[en]>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]
ja = ["misaki[ja]>=0.9.0"]  # Japanese support
zh = ["misaki[zh]>=0.9.0"]  # Chinese support
all-languages = [
    "misaki[en,ja,zh]>=0.9.0",
]

[project.urls]
Repository = "https://github.com/flight505/kokoro_tts_mlx"
Issues = "https://github.com/flight505/kokoro_tts_mlx/issues"

[project.scripts]
kokoro = "kokoro.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kokoro"]

[tool.hatch.build.targets.sdist]
include = ["src/kokoro"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
